# Referandium

./: README.md  package-lock.json  package.json  plasmic.json  tailwind.config.ts
app/: globals.css  layout.tsx  page-client.tsx  page.tsx  types.ts  wallet-adapter.css
app/admin/: page.tsx
app/components/: AppWalletProvider.tsx  MarketCard.tsx  ReferendumCard.tsx  VotingModal.tsx
app/components/ui/: WalletButton.tsx
app/dashboard/: page.tsx
app/data/: mockData.ts
backend/: Anchor.toml  Cargo.toml  README.md  package.json
backend/migrations/: deploy.ts
backend/programs/referandium/: Cargo.toml
backend/programs/referandium/src/: lib.rs
backend/tests/: referandium.ts
components/plasmic/blank_project/: PlasmicHomepage.tsx  PlasmicHomepageServer.tsx  PlasmicStyleTokensProvider.tsx  plasmic.module.css  plasmic.tsx
database/: INTEGRATION_CHECKLIST.md  README.md  migration_fix_schema.sql  migration_gookies.sql  schema.sql
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  theme.config.jsx
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/admin/: page.tsx
frontend/app/components/: AppWalletProvider.tsx  Footer.tsx  GookieCard.tsx  HomeClient.tsx  LanguageToggle.tsx  MarketCard.tsx  MarketChart.tsx  Navbar.tsx  ReferendumCard.tsx  ThemeSwitch.tsx
frontend/app/context/: LanguageContext.tsx  UserContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/gookies/: page.tsx
frontend/app/markets/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/utils/: formatQuestion.tsx  translations.ts
(+7 files in other folders)
