[package]
name = "referandium"
version = "0.1.0"
description = "Referandium - Policy Prescription Market on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "referandium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
